<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="70dp"
        android:textSize="20sp"
        android:text="@string/auto_cost_calc_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:background="@drawable/btn_rounded_corner"
        android:id="@+id/AutoCostCalcButton" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="70dp"
        android:textSize="20sp"
        android:text="@string/tire_size_calc"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:background="@drawable/btn_rounded_corner"
        android:id="@+id/TireSizeCalcButton"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="70dp"
        android:textSize="20sp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:background="@drawable/btn_rounded_corner"
        android:id="@+id/SettingsButton"/>

</LinearLayout>